<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="elite.kit.outwait.recyclerviewScreens.slotDetailDialog.SlotDetailDialogViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        tools:context=".recyclerviewScreens.slotDetailDialog.SlotDetailDialogFragment">


        <TextView
            android:id="@+id/tvSlotCodeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/slotcode"
            android:text="@{viewModel.slotCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivQRCode"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/ic_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSlotCodeDetail" />

        <TextView
            android:id="@+id/tvIdentifierDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/identifier"
            android:text="@{viewModel.identifier}"
            app:layout_constraintBottom_toTopOf="@+id/tvDurationDetail"
            app:layout_constraintEnd_toEndOf="@+id/ivQRCode"
            app:layout_constraintStart_toStartOf="@+id/ivQRCode"
            app:layout_constraintTop_toBottomOf="@+id/ivQRCode" />

        <TextView
            android:id="@+id/tvDurationDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/duration"
            android:text="@{viewModel.interval}"
            app:layout_constraintBottom_toTopOf="@+id/tvAppointmentTimeDetail"
            app:layout_constraintEnd_toEndOf="@+id/tvIdentifierDetail"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/tvIdentifierDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvIdentifierDetail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvAppointmentTimeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/appointment_time"
            android:text="@{viewModel.appointmentTime}"
                android:visibility="@{viewModel.isFixedSlot?View.VISIBLE:View.INVISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvDurationDetail"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/tvDurationDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvIdentifierDetail"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

