<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="elite.kit.outwait.recyclerviewScreens.configurationsScreen.ConfigDialogViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".recyclerviewScreens.configurationsScreen.ConfigDialogFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="197dp"
                android:layout_height="95dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMode">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sMode"
                    android:layout_width="93dp"
                    android:layout_height="39dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.692"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSwitchText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sMode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Save"
                android:onClick="@{()->viewModel.saveConfigValues()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationPrioritization" />

            <TextView
                android:id="@+id/tvMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Activ Mode is"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/durationNotification"
                android:layout_width="213dp"
                android:layout_height="247dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationTime">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <TextView
                android:id="@+id/tvStandardSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/standard_slot_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/durationStandardSlot"
                android:layout_width="213dp"
                android:layout_height="247dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStandardSlot">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <TextView
                android:id="@+id/tvNotificationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/notificationtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationStandardSlot" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/durationDelay"
                android:layout_width="213dp"
                android:layout_height="247dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="88dp"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDelayNotificationTime">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <TextView
                android:id="@+id/tvDelayNotificationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/delay_notificationtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationNotification" />

            <TextView
                android:id="@+id/tvPrioritizationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/prioritizationtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationDelay" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/durationPrioritization"
                android:layout_width="213dp"
                android:layout_height="247dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="76dp"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPrioritizationTime"
                app:layout_constraintVertical_bias="0.0">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/logout"
                android:onClick="@{()-> viewModel.logout()}"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
